--- a/App/Base.lproj/Main.storyboard
+++ b/App/Base.lproj/Main.storyboard
@@ -319,6 +319,7 @@
                         <viewControllerLayoutGuide type="bottom" id="B9N-uw-cy1"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="jlR-hU-ueI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="puzzle3second.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="fBe-qc-Nq2">
