--- a/App/Base.lproj/LaunchScreen.xib
+++ b/App/Base.lproj/LaunchScreen.xib
@@ -11,20 +11,20 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="intro_layers" translatesAutoresizingMaskIntoConstraints="NO" id="QgN-zD-HLl">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="new_intro" translatesAutoresizingMaskIntoConstraints="NO" id="QgN-zD-HLl">
                     <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
                     <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="-30" y="0.0" width="440" height="571"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     </variation>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
     <resources>
-        <image name="intro_layers" width="750" height="1334"/>
+        <image name="new_intro" width="750" height="1334"/>
     </resources>
 </document>
